syntax = "proto3";
package reward;
option go_package = "code.emcdtech.com/emcd/service/referral/protocol/reward;reward";

service RewardService {
  rpc Calculate(CalculateRequest) returns (CalculateResponse);
  rpc UpdateWithMultiplier(UpdateWithMultiplierRequest) returns (UpdateWithMultiplierResponse) {}
}

message Transaction {
  string user_id = 1;
  string type = 2;
  string amount = 3;
}

message CalculateRequest {
  string user_id = 1;
  string product = 2;
  string coin = 3;
  string amount = 4;
}

message CalculateResponse {
  repeated Transaction txs = 1;
}

message UpdateWithMultiplierRequest {
  float multiplier = 1;
  string user_id=2;
  repeated string coins=3;
  string product=4;
}

message UpdateWithMultiplierResponse {}